<resources>
    <string name="appName">turf</string>
    <string name="widgetDailyBudgetDollarsText">$2500</string>
    <string name="widgetDailyBudgetCentsText">00</string>
    <string name="widgetDailyTitleText">Daily</string>
    <string name="widgetWeeklyBudgetDollarsText">$$$$$</string>
    <string name="widgetWeeklyBudgetCentsText">00</string>
    <string name="widgetWeeklyTitleText">Weekly</string>
    <string name="widgetMonthlyBudgetDollarsText">$$$$$</string>
    <string name="widgetMonthlyBudgetCentsText">00</string>
    <string name="widgetMonthlyTitleText">Monthly</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_turf_account_config">TurfAccountConfig</string>
    <string name="title_activity_turf_account_configuration">TurfAccountConfiguration</string>
</resources>
